// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductView stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="max-w-7xl mx-auto p-4"
  >
    <div
      class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-12 space-y-6"
    >
      <div
        class="order-1"
      >
        <div
          class="space-y-4"
        >
          <div
            class="relative aspect-square overflow-hidden rounded-lg bg-muted"
          >
            <div
              class="w-full h-full object-cover object-center [&_img]:object-contain! [&_img]:h-full! [&_img]:max-w-full! [&_img]:mx-auto!"
            >
              <picture>
                <source
                  media="(min-width: 640px)"
                  sizes="680px"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=680 680w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=1360 1360w"
                  type="image/webp"
                />
                <source
                  sizes="100vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=640 640w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=1280 1280w"
                  type="image/webp"
                />
                <img
                  alt="Men's Classic Deer Gloves, , large"
                  class="object-cover"
                  fetchpriority="high"
                  loading="eager"
                  src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70"
                />
              </picture>
            </div>
          </div>
        </div>
        <details
          class="group border-b border-border mt-6"
          open=""
        >
          <summary
            class="flex items-center justify-between gap-4 py-4 text-base font-medium text-foreground cursor-pointer list-none [&::-webkit-details-marker]:hidden hover:bg-accent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-foreground transition-colors"
          >
            Description:
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-5 shrink-0 translate-y-0.5 transition-transform duration-200 group-open:rotate-180"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </summary>
          <div
            class="text-sm text-foreground [&_ul]:flex [&_ul]:flex-col [&_ul]:gap-1.5 [&_ul]:list-none [&_ul]:m-0 [&_ul]:p-0 [&_li]:flex [&_li]:items-center [&_li]:gap-2 [&_li]:before:content-[''] [&_li]:before:h-1.5 [&_li]:before:w-1.5 [&_li]:before:flex-shrink-0 [&_li]:before:rounded-full [&_li]:before:bg-foreground"
            data-testid="html-fragment"
          >
            <ul>
              <li>
                Grain deerskin leather
              </li>
              <li>
                Water resistant and durable
              </li>
              <li>
                Outseam machine sewn
              </li>
            </ul>
          </div>
        </details>
      </div>
      <div
        class="order-2"
      >
        <div
          class="hidden md:block"
        >
          <nav
            aria-label="Breadcrumb"
            class="mb-6"
          >
            <ol
              class="flex flex-wrap items-center text-sm"
            >
              <li
                class="flex items-center"
              >
                <a
                  class="text-primary-600 hover:underline"
                  href="/category/mens"
                >
                  Mens
                </a>
              </li>
              <li
                class="flex items-center"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-right mx-1 size-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
                <a
                  class="text-primary-600 hover:underline"
                  href="/category/mens-clothing"
                >
                  Clothing
                </a>
              </li>
            </ol>
          </nav>
        </div>
        <div
          class="grid gap-4"
        >
          <div
            class="hidden md:block"
          >
            <h1
              class="text-3xl font-bold text-foreground"
            >
              Men's Classic Deer Gloves
            </h1>
            <p
              class="mt-2 text-lg text-muted-foreground"
            >
              These simple, stylish gloves have a great look and feel, with outseam construction for rugged character and select deerskin leather for premium quality. The fleece lining provides essential winter warmth, with a lightly tailored cuff for extra protection – featuring a Commerce Cloud grommet button for detail. A classic glove for men.
            </p>
          </div>
          <div
            class="relative mt-2 inline-block"
          >
            <div
              aria-controls="radix-_r_0_"
              aria-haspopup="dialog"
              class="relative inline-block"
              data-slot="popover-trigger"
              data-state="closed"
              type="button"
            >
              <div
                class="flex flex-col gap-1"
              >
                <div
                  class="flex items-center gap-2"
                >
                  <div
                    aria-label="0 out of 5 stars, 0 reviews"
                    class="flex items-center gap-0.5"
                    role="group"
                  >
                    <svg
                      aria-hidden="true"
                      class="text-muted-foreground/30 w-4 h-4"
                      fill="currentColor"
                      style="opacity: 1;"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="text-muted-foreground/30 w-4 h-4"
                      fill="currentColor"
                      style="opacity: 1;"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="text-muted-foreground/30 w-4 h-4"
                      fill="currentColor"
                      style="opacity: 1;"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="text-muted-foreground/30 w-4 h-4"
                      fill="currentColor"
                      style="opacity: 1;"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="text-muted-foreground/30 w-4 h-4"
                      fill="currentColor"
                      style="opacity: 1;"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                      />
                    </svg>
                  </div>
                  <button
                    aria-label="View all reviews"
                    class="cursor-pointer text-sm text-muted-foreground underline decoration-dotted underline-offset-2 hover:text-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-1 rounded"
                    type="button"
                  >
                    0 (0)
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="items-center gap-2"
            >
              <span
                aria-label="Current price: £99.99"
                aria-live="polite"
                class="[&:not(:first-child)]:mt-6 text-left text-xl font-bold text-foreground"
              >
                £99.99
              </span>
              <span
                aria-atomic="true"
                aria-live="polite"
                class="sr-only"
              >
                Men's Classic Deer Gloves
                Current price: £99.99
              </span>
               
            </div>
          </div>
          <div
            class="inline-flex items-center px-3 py-1.5 rounded-md border text-sm font-medium text-success bg-success/10 border-success/20"
          >
            In stock
          </div>
          <div
            class="space-y-3"
          >
            <div
              aria-label="Size"
              class="inline-flex flex-col gap-3"
              role="radiogroup"
            >
              <div
                class="flex items-center gap-2 text-sm text-foreground"
              >
                <span
                  class="font-semibold"
                >
                  Size
                  :
                </span>
                <span>
                  L
                </span>
              </div>
              <div
                class="inline-flex flex-wrap gap-2 focus:outline-none bg-gray-100 dark:bg-muted rounded-lg p-1"
              >
                <a
                  aria-checked="false"
                  aria-label="M"
                  class="border-black/50 text-foreground flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 rounded-md px-3 py-1 cursor-pointer bg-gray-100 dark:bg-muted border-0 shadow-none"
                  href="/?accessorySize=050"
                  position="relative"
                  role="radio"
                  tabindex="-1"
                >
                  <div
                    class="flex items-center justify-center w-full h-full text-sm font-medium"
                  >
                    <span
                      class="text-xs font-medium"
                    >
                      M
                    </span>
                  </div>
                </a>
                <a
                  aria-checked="true"
                  aria-label="L"
                  class="text-foreground flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 rounded-md px-3 py-1 cursor-pointer bg-white dark:bg-muted border border-gray-300 dark:border-2 dark:border-input shadow-sm dark:shadow-none"
                  href="/?accessorySize=060"
                  position="relative"
                  role="radio"
                  tabindex="0"
                >
                  <div
                    class="flex items-center justify-center w-full h-full text-sm font-medium"
                  >
                    <span
                      class="text-xs font-medium"
                    >
                      L
                    </span>
                  </div>
                </a>
                <a
                  aria-checked="false"
                  aria-label="XL"
                  class="border-black/50 text-foreground flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 rounded-md px-3 py-1 cursor-pointer bg-gray-100 dark:bg-muted border-0 shadow-none"
                  href="/?accessorySize=080"
                  position="relative"
                  role="radio"
                  tabindex="-1"
                >
                  <div
                    class="flex items-center justify-center w-full h-full text-sm font-medium"
                  >
                    <span
                      class="text-xs font-medium"
                    >
                      XL
                    </span>
                  </div>
                </a>
              </div>
            </div>
          </div>
          <div
            class="mt-6"
          >
            <div
              class="space-y-4"
            >
              <div
                class="w-full"
              >
                <div
                  aria-required="false"
                  class="grid grid-cols-2 gap-2"
                  data-slot="radio-group"
                  data-testid="delivery-option-select"
                  dir="ltr"
                  role="radiogroup"
                  style="outline: none;"
                  tabindex="0"
                >
                  <label
                    class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs cursor-pointer border-muted-foreground/20 hover:border-primary/50"
                    data-slot="label"
                    for="delivery-option"
                  >
                    <button
                      aria-checked="false"
                      class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
                      data-radix-collection-item=""
                      data-slot="radio-group-item"
                      data-state="unchecked"
                      id="delivery-option"
                      role="radio"
                      tabindex="-1"
                      type="button"
                      value="delivery"
                    />
                    <div
                      class="mt-0.5 shrink-0"
                    >
                      <div
                        class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-muted-foreground/20"
                      />
                    </div>
                    <div
                      class="flex-1 min-w-0"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <span
                          class="text-xs font-medium text-foreground"
                        >
                          Deliver to
                        </span>
                        <p
                          class="text-xs text-muted-foreground mt-0.5"
                        >
                          Enter ZIP code to see delivery estimate
                        </p>
                      </div>
                    </div>
                  </label>
                  <label
                    class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs cursor-pointer border-muted-foreground/20 hover:border-primary/50"
                    data-slot="label"
                    for="pickup-option"
                  >
                    <button
                      aria-checked="false"
                      class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
                      data-radix-collection-item=""
                      data-slot="radio-group-item"
                      data-state="unchecked"
                      id="pickup-option"
                      role="radio"
                      tabindex="-1"
                      type="button"
                      value="pickup"
                    />
                    <div
                      class="mt-0.5 shrink-0"
                    >
                      <div
                        class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-muted-foreground/20"
                      />
                    </div>
                    <div
                      class="flex-1 min-w-0"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <span
                          class="text-xs font-medium text-foreground"
                        >
                          Free pickup in
                        </span>
                        <div
                          class="mt-0.5"
                        >
                          <button
                            class="text-xs text-primary hover:underline"
                            type="button"
                          />
                          <p
                            class="text-xs font-normal text-muted-foreground mt-1"
                          >
                            Now available for pickup today.
                          </p>
                        </div>
                      </div>
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="space-y-2"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-foreground"
              data-slot="label"
              for="quantity"
            >
              Quantity:
            </label>
            <div
              class="flex items-center space-x-1"
            >
              <button
                aria-label="Decrement Quantity for Men's Classic Deer Gloves"
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-9 h-8 w-8 p-0"
                data-size="icon"
                data-slot="button"
                data-testid="quantity-decrement"
                data-variant="outline"
                disabled=""
              >
                <span
                  class="text-sm"
                >
                  −
                </span>
              </button>
              <input
                aria-label="Quantity:"
                class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input min-w-0 rounded-md border bg-transparent px-3 py-1 shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 w-11 text-center text-sm [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
                data-slot="input"
                min="1"
                step="1"
                type="number"
                value="1"
              />
              <button
                aria-label="Increment Quantity for Men's Classic Deer Gloves"
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-9 h-8 w-8 p-0"
                data-size="icon"
                data-slot="button"
                data-testid="quantity-increment"
                data-variant="outline"
              >
                <span
                  class="text-sm"
                >
                  +
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="mt-6"
        >
          <div
            class="flex flex-col gap-3"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 w-full"
              data-size="lg"
              data-slot="button"
              data-variant="default"
            >
              Add to Cart
            </button>
            <div
              class="text-sm text-muted-foreground"
            >
              <span>
                Pay in 
                4
                 interest-free payments of
                 
                <span
                  class="font-bold text-foreground"
                >
                  $
                  12.25
                </span>
                .
                 
              </span>
              <button
                class="cursor-pointer font-normal text-primary hover:underline"
                type="button"
              >
                Learn more
              </button>
            </div>
            <div
              class="grid grid-cols-2 gap-3"
            >
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-10 rounded-md px-6 has-[>svg]:px-4 w-full"
                data-size="lg"
                data-slot="button"
                data-variant="outline"
              >
                Add to Wishlist
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="menu"
                aria-label="Share"
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-10 rounded-md px-6 has-[>svg]:px-4 w-full"
                data-size="lg"
                data-slot="dropdown-menu-trigger"
                data-state="closed"
                data-variant="outline"
                id="radix-_r_3_"
                type="button"
              >
                Share
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductView stories snapshot > WithoutBreadcrumbs story renders and matches snapshot 1`] = `
<div>
  <div
    class="max-w-7xl mx-auto p-4"
  >
    <div
      class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-12 space-y-6"
    >
      <div
        class="order-1"
      >
        <div
          class="space-y-4"
        >
          <div
            class="relative aspect-square overflow-hidden rounded-lg bg-muted"
          >
            <div
              class="w-full h-full object-cover object-center [&_img]:object-contain! [&_img]:h-full! [&_img]:max-w-full! [&_img]:mx-auto!"
            >
              <picture>
                <source
                  media="(min-width: 640px)"
                  sizes="680px"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=680 680w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=1360 1360w"
                  type="image/webp"
                />
                <source
                  sizes="100vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=640 640w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=1280 1280w"
                  type="image/webp"
                />
                <img
                  alt="Men's Classic Deer Gloves, , large"
                  class="object-cover"
                  fetchpriority="high"
                  loading="eager"
                  src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70"
                />
              </picture>
            </div>
          </div>
        </div>
        <details
          class="group border-b border-border mt-6"
          open=""
        >
          <summary
            class="flex items-center justify-between gap-4 py-4 text-base font-medium text-foreground cursor-pointer list-none [&::-webkit-details-marker]:hidden hover:bg-accent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-foreground transition-colors"
          >
            Description:
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-5 shrink-0 translate-y-0.5 transition-transform duration-200 group-open:rotate-180"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </summary>
          <div
            class="text-sm text-foreground [&_ul]:flex [&_ul]:flex-col [&_ul]:gap-1.5 [&_ul]:list-none [&_ul]:m-0 [&_ul]:p-0 [&_li]:flex [&_li]:items-center [&_li]:gap-2 [&_li]:before:content-[''] [&_li]:before:h-1.5 [&_li]:before:w-1.5 [&_li]:before:flex-shrink-0 [&_li]:before:rounded-full [&_li]:before:bg-foreground"
            data-testid="html-fragment"
          >
            <ul>
              <li>
                Grain deerskin leather
              </li>
              <li>
                Water resistant and durable
              </li>
              <li>
                Outseam machine sewn
              </li>
            </ul>
          </div>
        </details>
      </div>
      <div
        class="order-2"
      >
        <div
          class="grid gap-4"
        >
          <div
            class="hidden md:block"
          >
            <h1
              class="text-3xl font-bold text-foreground"
            >
              Men's Classic Deer Gloves
            </h1>
            <p
              class="mt-2 text-lg text-muted-foreground"
            >
              These simple, stylish gloves have a great look and feel, with outseam construction for rugged character and select deerskin leather for premium quality. The fleece lining provides essential winter warmth, with a lightly tailored cuff for extra protection – featuring a Commerce Cloud grommet button for detail. A classic glove for men.
            </p>
          </div>
          <div
            class="relative mt-2 inline-block"
          >
            <div
              aria-controls="radix-_r_5_"
              aria-haspopup="dialog"
              class="relative inline-block"
              data-slot="popover-trigger"
              data-state="closed"
              type="button"
            >
              <div
                class="flex flex-col gap-1"
              >
                <div
                  class="flex items-center gap-2"
                >
                  <div
                    aria-label="0 out of 5 stars, 0 reviews"
                    class="flex items-center gap-0.5"
                    role="group"
                  >
                    <svg
                      aria-hidden="true"
                      class="text-muted-foreground/30 w-4 h-4"
                      fill="currentColor"
                      style="opacity: 1;"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="text-muted-foreground/30 w-4 h-4"
                      fill="currentColor"
                      style="opacity: 1;"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="text-muted-foreground/30 w-4 h-4"
                      fill="currentColor"
                      style="opacity: 1;"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="text-muted-foreground/30 w-4 h-4"
                      fill="currentColor"
                      style="opacity: 1;"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="text-muted-foreground/30 w-4 h-4"
                      fill="currentColor"
                      style="opacity: 1;"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                      />
                    </svg>
                  </div>
                  <button
                    aria-label="View all reviews"
                    class="cursor-pointer text-sm text-muted-foreground underline decoration-dotted underline-offset-2 hover:text-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-1 rounded"
                    type="button"
                  >
                    0 (0)
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="items-center gap-2"
            >
              <span
                aria-label="Current price: £99.99"
                aria-live="polite"
                class="[&:not(:first-child)]:mt-6 text-left text-xl font-bold text-foreground"
              >
                £99.99
              </span>
              <span
                aria-atomic="true"
                aria-live="polite"
                class="sr-only"
              >
                Men's Classic Deer Gloves
                Current price: £99.99
              </span>
               
            </div>
          </div>
          <div
            class="inline-flex items-center px-3 py-1.5 rounded-md border text-sm font-medium text-success bg-success/10 border-success/20"
          >
            In stock
          </div>
          <div
            class="space-y-3"
          >
            <div
              aria-label="Size"
              class="inline-flex flex-col gap-3"
              role="radiogroup"
            >
              <div
                class="flex items-center gap-2 text-sm text-foreground"
              >
                <span
                  class="font-semibold"
                >
                  Size
                  :
                </span>
                <span>
                  L
                </span>
              </div>
              <div
                class="inline-flex flex-wrap gap-2 focus:outline-none bg-gray-100 dark:bg-muted rounded-lg p-1"
              >
                <a
                  aria-checked="false"
                  aria-label="M"
                  class="border-black/50 text-foreground flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 rounded-md px-3 py-1 cursor-pointer bg-gray-100 dark:bg-muted border-0 shadow-none"
                  href="/?accessorySize=050"
                  position="relative"
                  role="radio"
                  tabindex="-1"
                >
                  <div
                    class="flex items-center justify-center w-full h-full text-sm font-medium"
                  >
                    <span
                      class="text-xs font-medium"
                    >
                      M
                    </span>
                  </div>
                </a>
                <a
                  aria-checked="true"
                  aria-label="L"
                  class="text-foreground flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 rounded-md px-3 py-1 cursor-pointer bg-white dark:bg-muted border border-gray-300 dark:border-2 dark:border-input shadow-sm dark:shadow-none"
                  href="/?accessorySize=060"
                  position="relative"
                  role="radio"
                  tabindex="0"
                >
                  <div
                    class="flex items-center justify-center w-full h-full text-sm font-medium"
                  >
                    <span
                      class="text-xs font-medium"
                    >
                      L
                    </span>
                  </div>
                </a>
                <a
                  aria-checked="false"
                  aria-label="XL"
                  class="border-black/50 text-foreground flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 rounded-md px-3 py-1 cursor-pointer bg-gray-100 dark:bg-muted border-0 shadow-none"
                  href="/?accessorySize=080"
                  position="relative"
                  role="radio"
                  tabindex="-1"
                >
                  <div
                    class="flex items-center justify-center w-full h-full text-sm font-medium"
                  >
                    <span
                      class="text-xs font-medium"
                    >
                      XL
                    </span>
                  </div>
                </a>
              </div>
            </div>
          </div>
          <div
            class="mt-6"
          >
            <div
              class="space-y-4"
            >
              <div
                class="w-full"
              >
                <div
                  aria-required="false"
                  class="grid grid-cols-2 gap-2"
                  data-slot="radio-group"
                  data-testid="delivery-option-select"
                  dir="ltr"
                  role="radiogroup"
                  style="outline: none;"
                  tabindex="0"
                >
                  <label
                    class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs cursor-pointer border-muted-foreground/20 hover:border-primary/50"
                    data-slot="label"
                    for="delivery-option"
                  >
                    <button
                      aria-checked="false"
                      class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
                      data-radix-collection-item=""
                      data-slot="radio-group-item"
                      data-state="unchecked"
                      id="delivery-option"
                      role="radio"
                      tabindex="-1"
                      type="button"
                      value="delivery"
                    />
                    <div
                      class="mt-0.5 shrink-0"
                    >
                      <div
                        class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-muted-foreground/20"
                      />
                    </div>
                    <div
                      class="flex-1 min-w-0"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <span
                          class="text-xs font-medium text-foreground"
                        >
                          Deliver to
                        </span>
                        <p
                          class="text-xs text-muted-foreground mt-0.5"
                        >
                          Enter ZIP code to see delivery estimate
                        </p>
                      </div>
                    </div>
                  </label>
                  <label
                    class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs cursor-pointer border-muted-foreground/20 hover:border-primary/50"
                    data-slot="label"
                    for="pickup-option"
                  >
                    <button
                      aria-checked="false"
                      class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
                      data-radix-collection-item=""
                      data-slot="radio-group-item"
                      data-state="unchecked"
                      id="pickup-option"
                      role="radio"
                      tabindex="-1"
                      type="button"
                      value="pickup"
                    />
                    <div
                      class="mt-0.5 shrink-0"
                    >
                      <div
                        class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-muted-foreground/20"
                      />
                    </div>
                    <div
                      class="flex-1 min-w-0"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <span
                          class="text-xs font-medium text-foreground"
                        >
                          Free pickup in
                        </span>
                        <div
                          class="mt-0.5"
                        >
                          <button
                            class="text-xs text-primary hover:underline"
                            type="button"
                          />
                          <p
                            class="text-xs font-normal text-muted-foreground mt-1"
                          >
                            Now available for pickup today.
                          </p>
                        </div>
                      </div>
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="space-y-2"
          >
            <label
              class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-foreground"
              data-slot="label"
              for="quantity"
            >
              Quantity:
            </label>
            <div
              class="flex items-center space-x-1"
            >
              <button
                aria-label="Decrement Quantity for Men's Classic Deer Gloves"
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-9 h-8 w-8 p-0"
                data-size="icon"
                data-slot="button"
                data-testid="quantity-decrement"
                data-variant="outline"
                disabled=""
              >
                <span
                  class="text-sm"
                >
                  −
                </span>
              </button>
              <input
                aria-label="Quantity:"
                class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input min-w-0 rounded-md border bg-transparent px-3 py-1 shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 w-11 text-center text-sm [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
                data-slot="input"
                min="1"
                step="1"
                type="number"
                value="1"
              />
              <button
                aria-label="Increment Quantity for Men's Classic Deer Gloves"
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-9 h-8 w-8 p-0"
                data-size="icon"
                data-slot="button"
                data-testid="quantity-increment"
                data-variant="outline"
              >
                <span
                  class="text-sm"
                >
                  +
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="mt-6"
        >
          <div
            class="flex flex-col gap-3"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 w-full"
              data-size="lg"
              data-slot="button"
              data-variant="default"
            >
              Add to Cart
            </button>
            <div
              class="text-sm text-muted-foreground"
            >
              <span>
                Pay in 
                4
                 interest-free payments of
                 
                <span
                  class="font-bold text-foreground"
                >
                  $
                  12.25
                </span>
                .
                 
              </span>
              <button
                class="cursor-pointer font-normal text-primary hover:underline"
                type="button"
              >
                Learn more
              </button>
            </div>
            <div
              class="grid grid-cols-2 gap-3"
            >
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-10 rounded-md px-6 has-[>svg]:px-4 w-full"
                data-size="lg"
                data-slot="button"
                data-variant="outline"
              >
                Add to Wishlist
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="menu"
                aria-label="Share"
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-10 rounded-md px-6 has-[>svg]:px-4 w-full"
                data-size="lg"
                data-slot="dropdown-menu-trigger"
                data-state="closed"
                data-variant="outline"
                id="radix-_r_8_"
                type="button"
              >
                Share
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
